vlib/v/checker/tests/assign_expr_type_err_c.out
vlib/v/checker/tests/assign_expr_type_err_c.v:3:2: error: operator *= not defined on left operand type `string`
    1 | fn main() {
    2 |     mut foo := 'hello'
    3 |     foo *= 10
      |     ~~~
    4 | }
