vlib/v/checker/tests/assign_expr_type_err_c.vv
fn main() {
	mut foo := 'hello'
	foo *= 10
}